[FEAT] Removed the getPriceHistory method #12